Bug 512336.  Make frame lists doubly-linked.  r=roc,fantasai