layout/tables/nsTableFrame.cpp
@@ -1953,7 +1953,6 @@ nsTableFrame::PushChildren(const FrameArray& aFrames,
   // extract the frames from the array into a sibling list
   nsFrameList frames;
   PRUint32 childX;
-  nsIFrame* prevSiblingHint = aFrames.SafeElementAt(aPushFrom - 1);
   for (childX = aPushFrom; childX < aFrames.Length(); ++childX) {
     nsIFrame* f = aFrames[childX];
     // Don't push repeatable frames, do push non-rowgroup frames.
@@ -1963,7 +1962,7 @@ nsTableFrame::PushChildren(const FrameArray& aFrames,
     nsTableRowGroupFrame* rgFrame = GetRowGroupFrame(f);
     NS_ASSERTION(rgFrame, "Unexpected non-row-group frame");
     if (!rgFrame || !rgFrame->IsRepeatable()) {
-      mFrames.RemoveFrame(f, prevSiblingHint);
+      mFrames.RemoveFrame(f);
       frames.AppendFrame(nsnull, f);
     }
   }
@@ -1975,7 +1974,7 @@ nsTableFrame::PushChildren(const FrameArray& aFrames,
     nsIFrame* firstBodyFrame = nextInFlow->GetFirstBodyRowGroupFrame();
     nsIFrame* prevSibling = nsnull;
     if (firstBodyFrame) {
-      prevSibling = nextInFlow->mFrames.GetPrevSiblingFor(firstBodyFrame);
+      prevSibling = firstBodyFrame->GetPrevSibling();
     }
     // When pushing and pulling frames we need to check for whether any
     // views need to be reparented.
